# epub2audio

./: .gitignore  pyproject.toml
src/epub2audio/: __init__.py  main.py
src/epub2audio/audio/: markdown_to_audio.py  narrate_chapters.py
src/epub2audio/reformat/: __init__.py  convert_html.py  convert_markdown.py  create_audiobook.py  extract.py  reformat.py  reformat_main.py
src/epub2audio/utils/: __init__.py  logging.py
