[project]
name = "epub2audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxwell Ludden", email = "max@ludden.dev" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
